test/soft-contract/ill-typed/foldr1.caprice
(* TEST
  include refutable;
*)

(* error is that xs should be nonempty *)

let rec foldr1 (type a_) (f : a_ -> a_ -> a_) (xs : list a_) : a_ =
  match xs with
  | z :: [] -> z
  | z :: zs -> f z (foldr1 a_ f zs)
  (* ERROR: xs chould be empty *)
  end
